// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo Block adds mobileicon modifier 1`] = `
<a
  className="sc-bxivhb cZFXvN"
  href="/"
  mobileicon="true"
  onClick={[Function]}
>
  <img
    className="sc-htpNat ljPkey"
  />
  <h1
    className="sc-bwzfXH ljyKVz"
  />
  <img
    className="sc-bdVaJa ibrkLT"
  />
</a>
`;

exports[`Logo Block renders correctly 1`] = `
<a
  className="sc-bxivhb cEytNk"
  href="/"
  onClick={[Function]}
>
  <img
    className="sc-htpNat ljPkey"
  />
  <h1
    className="sc-bwzfXH ljyKVz"
  />
  <img
    className="sc-bdVaJa ibrkLT"
  />
</a>
`;
